Пятый коммит. ТЗ6. Исправления замечаний.